src/App.css
body {
  background-color: #f0f2f5;
}

.logo {
  float: left;
  margin-right: 1em;
}

.ant-layout-header, .ant-layout-header .ant-menu {
  background: #000b0c;
}

.ant-alert-info {
  background-color: #e6f7ff;
  border: 1px solid #91d5ff;
}

.ant-alert-info .anticon-info-circle {
  color: #1890ff;
}

@media screen and (max-width: 750px) {
  .janeliaLogo {
    display:none;
  }
}

@media screen and (max-width: 920px) {
  .projectLogo {
    display:none;
  }
}

@media screen and (min-width: 650px) {
  .site-layout {
    padding: 0 50px;
  }
}

.siteLogo {
  position:relative;
  top: 14px;
  margin-right: 1em;
}

.janeliaLogo {
  position: absolute;
  top: 14px;
  right: 2em;
}

.janeliaLogo img {
  height: 40px;
  margin-top: -7px;
  margin-left: 1em;
}

.site-layout-background {
  background: #fff;
  min-height: 600px;
  padding: 1em;
}

.debug {
  color: #f0f2f5;
}

.siteFooter ul {
  list-style: none;
  padding: 0;
}

